--- a/www/css/index.css
+++ b/www/css/index.css
@@ -1,13 +1,29 @@
 body {
 	background-color: black;
-    font-family:'HelveticaNeue-Light', 'HelveticaNeue', Helvetica, Arial, sans-serif;
+    font-family: 'HelveticaNeue-Light', 'HelveticaNeue', Helvetica, Arial, sans-serif;
     font-size:12px;
     margin:0px;
     padding:0px;
 }
 
-h1 {	
-    font-size:50px;
+h1 {
+    font-size:45px;
+    font-weight:normal;
+	color:#FFFFFF;
+    margin: auto;
+    overflow:visible;
+    padding: 20px 0px 0px 0px;
+    text-align:center;
+	text-shadow: 0px 0px 15px rgba(255, 255, 255, 1);
+}
+
+tr > td
+{
+  padding-bottom: 10px;
+}
+
+td {
+    font-size:20px;
     font-weight:normal;
 	color:#FFFFFF;
     margin:0px;
@@ -15,11 +31,27 @@ h1 {
     padding:0px;
     text-align:center;
 	text-shadow: 0px 0px 15px rgba(255, 255, 255, 1);
+	cursor:pointer;
+	text-align:left;
 }
 
-#intro {
+.right {
+	text-align: right;
+}
+
+.counter {
 	position: absolute;
-    height: 15%;
-    width: 100%;
-	top: 40%;
+	bottom: 0%;
+	left: 0%;
+    margin:0px;
+    padding:0px;
+	border: 0px;
+}
+
+.intro {
+	position: absolute;
+    width: 30%;
+	left: 35%;
+	top: 35%;
+	text-align: left;
 }
