--- a/www/css/test1.css
+++ b/www/css/test1.css
@@ -7,14 +7,14 @@ body {
 }
 
 h1 {
-    font-size:50px;
+    font-size:45px;
     font-weight:normal;
 	color:#FFFFFF;
     margin:0px;
     overflow:visible;
     padding:0px;
     text-align:center;
-	text-shadow: 0px 0px 7px rgba(255, 255, 255, 1);
+	text-shadow: 0px 0px 15px rgba(255, 255, 255, 1);
 }
 
 h2 {
@@ -25,7 +25,7 @@ h2 {
     overflow:visible;
     padding:0px;
     text-align:center;
-	text-shadow: 0px 0px 2px rgba(255, 255, 255, 1);
+	text-shadow: 0px 0px 10px rgba(255, 255, 255, 1);
 }
 
 #intro {
@@ -47,7 +47,12 @@ h2 {
 	margin-bottom: 2%;
 }
 
-#btn {
+#btn2 {
+	margin-top: 20px;
+	display: none;
+}
+
+.btn {
 	background: #9eacb5;
 	background-image: -webkit-linear-gradient(top, #9eacb5, #374147);
 	background-image: -moz-linear-gradient(top, #9eacb5, #374147);
@@ -68,9 +73,10 @@ h2 {
 	text-decoration: none;
 	margin-left: 45%;
 	width: 10%;
+	cursor:pointer;
 }
 
-#btn:hover {
+.btn:hover {
 	background: #a8b0b5;
 	background-image: -webkit-linear-gradient(top, #a8b0b5, #494c4d);
 	background-image: -moz-linear-gradient(top, #a8b0b5, #494c4d);
