--- a/www/css/test2.css
+++ b/www/css/test2.css
@@ -58,7 +58,7 @@ h2 {
 	display: none;
 }
 
-#timer {	
+#timer {
 	position: absolute;
     height: 10%;
     width: 20%;
@@ -66,6 +66,12 @@ h2 {
 	border: 0px;
 	left: 40%;
 	display: none;
+	-webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 }
 
 .btn {
