--- a/www/css/test3.css
+++ b/www/css/test3.css
@@ -28,6 +28,22 @@ h2 {
 	text-shadow: 0px 0px 10px rgba(255, 255, 255, 1);
 }
 
+#timer {
+	position: absolute;
+    height: 10%;
+    width: 20%;
+	top: 15%;
+	border: 0px;
+	left: 40%;
+	display: none;
+	-webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+
 #intro {
 	position: absolute;
     height: 15%;
@@ -63,6 +79,13 @@ h2 {
 	border: 0px;
 	overflow: visible;
 	z-index: 1;
+	-webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+	cursor:pointer;
 }
 
 .btn {
