--- a/www/css/test3.css
+++ b/www/css/test3.css
@@ -1,6 +1,6 @@
 body {
 	background-color: black;
-    font-family:'HelveticaNeue-Light', 'HelveticaNeue', Helvetica, Arial, sans-serif;
+    font-family: Calibri, 'HelveticaNeue-Light', 'HelveticaNeue', Helvetica, Arial, sans-serif;
     font-size:12px;
     margin:0px;
     padding:0px;
